--- a/20230403Leetcode.md
+++ b/20230403Leetcode.md
@@ -1,10 +1,13 @@
-# 20230403 Leetcode 刷题
+# 1. 20230403 Leetcode 刷题
 
-## 数组
+## 1.1. 数组
 
-### 滑动窗格
+### 1.1.1. 滑动窗格
 1、最小滑窗模板：给定数组 nums，定义滑窗的左右边界 i, j，求满足某个条件的滑窗的最小长度。
-```
+```- [1. 20230403 Leetcode 刷题](#1-20230403-leetcode-刷题)
+  - [1.1. 数组](#11-数组)
+    - [1.1.1. 滑动窗格](#111-滑动窗格)
+
 while j < len(nums):
     判断[i, j]是否满足条件
     while 满足条件：
