add Readme and add code

--- a/20230403Leetcode.md
+++ b/20230403Leetcode.md
@@ -1,13 +1,43 @@
-# 1. 20230403 Leetcode 刷题
+# 20230403 Leetcode 刷题
 
-## 1.1. 数组
+## 1 数组
 
-### 1.1.1. 滑动窗格
+### 1.1 双指针
+
+tips: \
+给你一个按 非递减顺序 排序的整数数组 nums，返回 每个数字的平方 组成的新数组，要求也按 非递减顺序 排序。
+```
+class Solution {
+public:
+    vector<int> sortedSquares(vector<int>& nums) {
+        // 暴力解法 O（n+ nlogn）
+        // for (int i =0 ;i < nums.size(); i++){
+        //     nums[i] *= nums[i];
+        // }
+        // sort(nums.begin(),nums.end());
+        // return nums;
+
+        // 双指针法 O(n)
+        int k = nums.size() - 1 ;
+        vector<int> result(nums.size(), 0 );
+        for (int i=0, j=nums.size()-1; i<=j;){
+            if (nums[i]*nums[i] < nums[j] *nums[j]){
+                result[k--] =  nums[j] *nums[j] ;
+                j-- ;
+            } else {
+                result[k--] = nums[i]*nums[i];
+                i++ ; 
+            }
+        }
+        return result;
+    }
+};
+```
+
+### 1.2 滑动窗格
 1、最小滑窗模板：给定数组 nums，定义滑窗的左右边界 i, j，求满足某个条件的滑窗的最小长度。
-```- [1. 20230403 Leetcode 刷题](#1-20230403-leetcode-刷题)
-  - [1.1. 数组](#11-数组)
-    - [1.1.1. 滑动窗格](#111-滑动窗格)
 
+```
 while j < len(nums):
     判断[i, j]是否满足条件
     while 满足条件：
@@ -53,12 +83,11 @@ public:
         return result == INT32_MAX ? 0 : result;
     }
 };
+
 ```
-
- 
-
 2、最大滑窗模板：给定数组 nums，定义滑窗的左右边界 i, j，求满足某个条件的滑窗的最大长度。
 ```
+
 while j < len(nums):
     判断[i, j]是否满足条件
     while 不满足条件：
@@ -66,7 +95,10 @@ while j < len(nums):
     不断更新结果（注意在while外更新！）
     j += 1
 ```
+
 关键的区别在于，最大滑窗是在迭代右移右边界的过程中更新结果，而最小滑窗是在迭代右移左边界的过程中更新结果
+
+tips:904. 水果成篮 
 
 ```
 //官方
@@ -94,5 +126,40 @@ public:
 };
 
 ```
+#### 利用哈希表优化
+```
+class Solution {
+public:
+    int totalFruit(vector<int>& fruits) {
+        //由题意，转化问题为：求只包含两种元素的最长连续子序列
+        //滑动窗口法
+        int i = 0; //滑动窗口左边界
+        int sub_len = 0; //子序列长度
+        int fruit_counter = 0; //篮子中的水果种类数
+        int len = fruits.size();
 
+        unordered_map<int, int> basket; //创建篮子
+        for (int j = 0; j < len; j++) {
+            
+            if (basket[fruits[j]] == 0) {
+                fruit_counter++;
+            }
+            basket[fruits[j]]++; //因为value是int属性、初始值为0，相当于将fruits的元素作为key依次放入哈希表basket中，并更新对应value（表示该key的出现次数）
+
+            //如果篮子中的水果数目超过两种，则需要移动左边界，对应从子序列中删去水果的value要减一
+            for (;fruit_counter > 2; i++) {
+                basket[fruits[i]]--;
+
+                //若对应水果key的value变为0，说明篮子里已经没有这种水果了，水果种类要对应变化
+                if (basket[fruits[i]] == 0) {
+                    fruit_counter--;
+                }
+            }
+            //在第二个for循环结束后，篮子中的水果一定满足题意要求，此时更新子序列长度
+            sub_len = max(sub_len, j - i + 1);
+        }
+        return sub_len;
+    }
+};
+```
 
